--- a/src/webroot/css/less/photosIndex.less
+++ b/src/webroot/css/less/photosIndex.less
@@ -4,6 +4,9 @@
 }
 
 .photos-index {
+    .photos-index-row {
+        padding-left: 1.5%;
+    }
     
     .photo-container {
         border: 1px solid #b5b5b5;
