--- a/src/webroot/css/less/photosIndex.less
+++ b/src/webroot/css/less/photosIndex.less
@@ -92,3 +92,66 @@
         border: none;
     }
 }
+
+.photos-view-detail {
+    /*width: 85%;*/
+    .photo-view-detail-container {
+        border: 1px solid #b5b5b5;
+        width: 70%;
+        height: 0;
+        padding-bottom: 70%;
+        margin-top: 2%;
+        margin-bottom: 1.5%;
+        position: relative;
+        overflow: hidden;
+    }
+    
+    .photos-vertical {
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translate(-50%,-50%);
+        height: 100%;
+        width: auto;
+    }
+    
+    .photos-horizontal {
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translate(-50%,-50%);
+        height: auto;
+        width: 100%;
+    }
+    
+    .photos-horizontal-background {
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translate(-50%,-50%);
+        height: 100%;
+        width: 70%;
+        background: #f5f5f5;
+    }
+    
+    .photos-vertical-background {
+        position: absolute;
+        top: 50%; left: 50%;
+        transform: translate(-50%,-50%);
+        height: 70%;
+        width: 100%;
+        background: #f5f5f5;
+    }
+    
+    .photo-view-buttons {
+        width: 28%;
+        .photo-view-next {
+            width: 100%;
+            margin-top: 100%;
+        }
+        
+        h2 {
+            color: #66bbff;
+            font-weight: bold;
+        }
+    }
+    
+    /*.photos-v*/
+}
