--- a/src/webroot/css/less/content.less
+++ b/src/webroot/css/less/content.less
@@ -4,8 +4,8 @@ a {
 .navbar {
     background: url('/img/layout/header.png') center center no-repeat #19161a !important;
     min-height: 97px;
-    border-bottom: 6px solid #e89e11;
-    
+    border-bottom: 6px solid #eda111;
+    overflow: hidden;
      .navbar-brand {
         line-height: 97px;
     }
@@ -14,9 +14,32 @@ a {
     }
     .cart-btn.desktopmenu {
         padding: 13px 0px;
-    } 
-        
-    
+    }
+    .navbar-back-to-index {
+        overflow: hidden;
+        position: absolute;
+        right: 40%;
+        top: 42%;
+        width: 180px;
+        height: 65%;
+        background: #e89e11;
+        padding: 10px;
+        border-radius: 7px;
+        color: white;
+        font-size: medium;
+        font-weight: bold;
+        .navbar-back-to-index-img {
+            position: absolute;
+            height: 70%;
+            top: 15%;
+        }
+        .navbar-back-to-index-text {
+            position:absolute;
+            width: 70%;
+            right: 10px;
+            top: 8px;
+        }
+    }   
 }
 .dropdown-menu {
     background: #505e74;
