--- a/src/webroot/css/less/photosIndex.less
+++ b/src/webroot/css/less/photosIndex.less
@@ -274,6 +274,21 @@
                 height: auto;
                 width: 100%;
             }
+            
+            .photos-vertical-overlay {
+                position: absolute;
+                top: 50%; left: 50%;
+                transform: translate(-50%,-50%);
+                height: 101%;
+                width: auto;
+            }
+            .photos-horizontal-overlay {
+                position: absolute;
+                top: 50%; left: 50%;
+                transform: translate(-50%,-50%);
+                height: auto;
+                width: 101%;
+            }
 
             .photos-horizontal-background {
                 position: absolute;
