--- a/src/webroot/css/less/photosIndex.less
+++ b/src/webroot/css/less/photosIndex.less
@@ -71,6 +71,18 @@
         text-align: left;
     }
     
+    @media only screen and (max-width: 990px) and (min-width: 426px) {
+        .photos-index-banner-ul li {
+            background-size: 3%;
+        }
+    }
+    
+    @media only screen and (max-width: 425px) and (min-width: 321px) {
+        .photos-index-banner-ul li {
+            background-size: 6%;
+        }
+    }
+    
     .photos-index-banner-ul h5 {
         font-weight: bold;
     }
