--- a/src/webroot/css/less/photosIndex.less
+++ b/src/webroot/css/less/photosIndex.less
@@ -3,6 +3,34 @@
     font-weight: bold;
 }
 
+.photos-horizontal {
+    position: absolute;
+    top: 50%; left: 50%;
+    transform: translate(-50%,-50%);
+    height: auto;
+    width: 100%;
+}
+
+.photos-vertical {
+    position: absolute;
+    top: 50%; left: 50%;
+    transform: translate(-50%,-50%);
+    height: 100%;
+    width: auto;
+}
+
+.photos-horizontal-background {
+    height: 100%;
+    width: 70%;
+    background: #f5f5f5;
+}
+
+.photos-vertical-background {
+    height: 70%;
+    width: 100%;
+    background: #f5f5f5;
+}
+
 .photos-index {
     .photos-index-row {
         padding-left: 1.5%;
@@ -17,34 +45,6 @@
         margin-bottom: 1.5%;
         position: relative;
         overflow: hidden;
-    }
-    
-    .photos-horizontal {
-        position: absolute;
-        top: 50%; left: 50%;
-        transform: translate(-50%,-50%);
-        height: auto;
-        width: 100%;
-    }
-    
-    .photos-vertical {
-        position: absolute;
-        top: 50%; left: 50%;
-        transform: translate(-50%,-50%);
-        height: 100%;
-        width: auto;
-    }
-    
-    .photos-horizontal-background {
-        height: 100%;
-        width: 70%;
-        background: #f5f5f5;
-    }
-    
-    .photos-vertical-background {
-        height: 70%;
-        width: 100%;
-        background: #f5f5f5;
     }
 }
 
@@ -102,6 +102,22 @@
 .photos-view-detail {
     margin-top: 4%;
     height: auto;
+    
+    h2 {
+        color: #d15400;
+        font-weight: bold;
+    }
+    
+    .photo-container {
+        width: 30%;
+        height: 0;
+        padding-bottom: 30%;
+        margin-right: 1.5%;
+        margin-bottom: 1.5%;
+        position: relative;
+        overflow: hidden;
+    }
+    
     .photos-view-detail-container {
         width: 100%;
         height: 0;
@@ -110,34 +126,6 @@
         margin-bottom: 1.5%;
         position: relative;
         overflow: hidden;
-        
-        .photos-horizontal {
-            position: absolute;
-            top: 50%; left: 50%;
-            transform: translate(-50%,-50%);
-            height: auto;
-            width: 100%;
-        }
-
-        .photos-vertical {
-            position: absolute;
-            top: 50%; left: 50%;
-            transform: translate(-50%,-50%);
-            height: 100%;
-            width: auto;
-        }
-
-        .photos-horizontal-background {
-            height: 100%;
-            width: 70%;
-            background: #f5f5f5;
-        }
-
-        .photos-vertical-background {
-            height: 70%;
-            width: 100%;
-            background: #f5f5f5;
-        }
     }
     
     .photos-view-detail-text {
@@ -254,22 +242,6 @@
             margin-bottom: 1.5%;
             position: relative;
             overflow: hidden;
-            
-            .photos-horizontal {
-                position: absolute;
-                top: 50%; left: 50%;
-                transform: translate(-50%,-50%);
-                height: auto;
-                width: 100%;
-            }
-            
-            .photos-vertical {
-                position: absolute;
-                top: 50%; left: 50%;
-                transform: translate(-50%,-50%);
-                height: 100%;
-                width: auto;
-            }
             
             .photos-horizontal-overlay {
                 width: 101%;
