--- a/src/webroot/css/less/photosIndex.less
+++ b/src/webroot/css/less/photosIndex.less
@@ -100,57 +100,60 @@
     }
 }
 
-@media only screen and (max-width: 992px) {
-    .photos-index-banner {
-        border: 1px solid #b5b5b5;
-        background-image: url('../img/layout/Hoogstraten_webshop-onderdelen-41.png');
-        background-size: 100% 100%;
-        background-repeat: no-repeat;
-        padding-left: 3%;
-        padding-right: 0px;
-        width: 100%;
-        height: 100px;
+.photos-index-banner-sm {
+    border: 1px solid #b5b5b5;
+    background-image: url('../img/layout/Hoogstraten_webshop-onderdelen-41.png');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    padding-left: 3%;
+    padding-right: 0px;
+    width: 100%;
+    height: 100px;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-align-items: center;
+    align-items: center;
+    -webkit-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-justify-content: flex-start;
+    justify-content: flex-start;
+
+    .banner-flex-item {
+        /*border: 1px solid white;*/
         display: -webkit-flex;
         display: flex;
-        -webkit-align-items: center;
-        align-items: center;
-        -webkit-flex-wrap: wrap;
-        flex-wrap: wrap;
-        -webkit-justify-content: flex-start;
-        justify-content: flex-start;
-        
-        .banner-flex-item {
-            /*border: 1px solid white;*/
-            display: -webkit-flex;
-            display: flex;
-            height: 30px;
-            width: 25%;
-            margin-left: 1%;
-            -webkit-align-items: flex-start;
-            align-items: flex-start;
-            background: url('../img/layout/Hoogstraten_webshop-onderdelen-07.png') no-repeat;
-            background-position: 0% 2%;
-            background-size: auto 50%;
-            padding-left: 20px;
-            color: #00b4ff;
-            font-size: 10px;
-            font-weight: bold;
-        }
-        .long {
-            width: 35%;
-        }
-        .last {
-            /*margin-right: auto;*/
-        }
-        .photos-index-banner-img {
-            position: absolute;
-            height: auto;
-            width: 20%;
-            right: -5%;
-            bottom: 100%;
-            -ms-transform: rotate(9deg); /* IE 9 */
-            -webkit-transform: rotate(9deg); /* Chrome, Safari, Opera */
-            transform: rotate(12deg) translate(0%, 30%);
+        height: 30px;
+        width: 25%;
+        margin-left: 1%;
+        -webkit-align-items: flex-start;
+        align-items: flex-start;
+        background: url('../img/layout/Hoogstraten_webshop-onderdelen-07.png') no-repeat;
+        background-position: 0% 2%;
+        background-size: auto 50%;
+        padding-left: 20px;
+        color: #00b4ff;
+        font-size: 10px;
+        font-weight: bold;
+    }
+    .long {
+        width: 35%;
+    }
+    .last {
+        /*margin-right: auto;*/
+    }
+    .photos-index-banner-img {
+        position: absolute;
+        height: auto;
+        width: 20%;
+        right: -5%;
+        bottom: 100%;
+        -ms-transform: rotate(9deg); /* IE 9 */
+        -webkit-transform: rotate(9deg); /* Chrome, Safari, Opera */
+        transform: rotate(12deg) translate(0%, 30%);
+    }
+    @media only screen and (max-width: 500px) {
+        .small-font {
+            font-size: 8px;
         }
     }
 }
@@ -335,6 +338,17 @@
             margin-bottom: 1.5%;
             position: relative;
             overflow: hidden;
+        }
+    }
+    
+    @media only screen and (max-width: 530px) {
+        .photos-product-container {
+            width: 100%;
+        }
+    }
+    @media only screen and (max-width: 375px) {
+        h2 {
+            font-size: 25px;
         }
     }
 }
