--- a/src/webroot/css/style.less
+++ b/src/webroot/css/style.less
@@ -1,3 +1,4 @@
 @import "../../../vendor/twbs/bootstrap/less/bootstrap.less";
 @import "less/content.less";
 @import "less/photosIndex.less";
+@import "less/login.less";
