--- a/src/webroot/css/less/login.less
+++ b/src/webroot/css/less/login.less
@@ -3,45 +3,49 @@
     height: 100%;
     width: 100%;
     left: 0;
-    /*top: 0;*/
+    top: 0;
+    display: flex;
+    justify-content: center;
+    /*padding-top: 97px;*/
+    overflow: auto;
     background: -webkit-radial-gradient(50% -5%, #455267, #1a181c); /* Safari */
     background: -o-radial-gradient(50% -5%, #455267, #1a181c); /* Opera 11.6 to 12.0 */
     background: -moz-radial-gradient(50% -5%, #455267, #1a181c); /* Firefox 3.6 to 15 */
     
     .login-main-container {
-        position: relative;
         width: 1100px;
         height: 100%;
-        margin: 0 auto;
-        
+        margin: auto;
+        /*padding: 2%;*/
+        .row {
+            padding:3%;
+        }
         
         .login-main-container-panel {
-            position: absolute;
-            width: 350px;
-            height: 500px;
+            min-height: 500px;
             background-image: url('../img/layout/Hoogstraten_webshop-onderdelen-12.png');
             background-size: 100% 100%;
-            left: 2%;
-            top: 50%;
-            transform: translate(0%, -60%);
-            overflow: hidden;
-            
+            padding:0px;
+            padding-top: 2%;
+            padding-bottom: 2%;
+            border-radius: 10px;
             .inlog-form {
-                height: 100%;
+                display: flex;
+                justify-content: center;
+                flex-wrap: wrap;
                 width: 100%;
-                margin: auto;
+                min-height: 500px;
                 
                 .login-portraits-container {
                     width: 100%;
+                    min-height: 25%;
                     margin-top: 4%;
-                    margin-left: 5%;
-                    margin-right: 5%;
                     padding: 2%;
                     display: flex;
-                    justify-content: flex-start;
-                    align-items: center;
+                    justify-content: center;
+                    align-items: flex-start;
+                    align-self: flex-start;
                     flex-wrap: wrap;
-                    overflow: hidden;
 
                     .portrait-container {
                         width: 50px;
@@ -51,24 +55,23 @@
                         position: relative;
                         overflow: hidden;
                         margin: 5px;
-
                         .photos-vertical {
-                            height: 130%;
+                            height: 150%;
                             max-width: 100%;
                         }
                         .photos-horizontal {
+                            width: 150%;
                             max-height: 100%;
                         }
                     }
                 }
                 .login-inputs-panel-before {
-                    position: absolute;
-                    top: 25%;
+                    width: 100%;
                 }
                 .login-inputs-panel-after {
-                    position: absolute;
-                    top: 30%;
+                    width: 100%;
                     .login-inputs-panel-after-hidden {
+                        position: relative;
                         margin: auto;
                         width: 70%;
                         display: none;
@@ -102,25 +105,12 @@
                     padding-right: 5%;
                     padding-top: 2%;
                     padding-bottom: 2%;
-                    /*border-top: rgba(199,199,199, 1) solid 2px;*/
-                }
-                .input:focus {
                 }
                 .login-submit-button {
-                    padding-top: 5%;
-                    padding-left: 5%;
-                    padding-right: 5%;
+                    padding: 5%;
                     position: relative;
-                    h2 {
-                        position: absolute;
-                        top: 50%; left: 50%;
-                        transform: translate(-50%,-50%);
-                        height: auto;
-                        width: 100%;
-                    }
                 }
-                .login-container-submit {
-                    /*background: white;*/
+                .login-container-button {
                     -webkit-transition: all 0.30s ease-in-out;
                     -moz-transition: all 0.30s ease-in-out;
                     -ms-transition: all 0.30s ease-in-out;
@@ -128,13 +118,40 @@
                     -webkit-filter: brightness(90%);
                     filter: brightness(0.9);
                     width: 100%;
-                    height: auto;
                     cursor: pointer;
+                    
+                    
+                    .input-image {
+                        width: 100%;
+                        height: auto;
+                    }
+                    span {
+                        position: absolute;
+                        top: 50%; left: 50%;
+                        transform: translate(-50%,-50%);
+                        width: 100%;
+                        text-align: center;
+                        color: white;
+                        font-family: Alegreya Sans;
+                        font-weight: bold;
+                        font-size: 1em;
+                        pointer-events: none;
+                    }
                 }
-                .login-container-submit:hover {
+                .order-button {
+                    position: relative;
+                }
+                .submit-button {
+                    position: relative;
+                    display: block;
+                }
+                .login-container-button:hover {
                     -webkit-filter: brightness(115%);
                     filter: brightness(1.15);
                     box-shadow: 0 0 20px rgba(255, 204, 0, 1);
+                }
+                .login-add-child {
+                    position: relative;
                 }
                 .login-add-child:hover {
                     box-shadow: 0 0 20px rgba(117, 214, 214, 1);
@@ -143,26 +160,46 @@
                     filter: brightness(0.4);
                 }
                 .flash-message {
-                    position: absolute;
                     padding-left: 5%;
                     padding-right: 5%;
-                    bottom: 5px;
-                    width: 350px;
+                    margin-bottom: 2%;
+                    align-self: flex-end;
+                    width: 100%;
                     height: 20px;
                     border: red;
                     color: red;
                     text-align: center;
                 }
+                .noselect {
+                    -webkit-touch-callout: none; /* iOS Safari */
+                    -webkit-user-select: none;   /* Chrome/Safari/Opera */
+                    -khtml-user-select: none;    /* Konqueror */
+                    -moz-user-select: none;      /* Firefox */
+                    -ms-user-select: none;       /* Internet Explorer/Edge */
+                    user-select: none;
+                }
+            }
+        }
+        
+        @media only screen and (max-width: 767px) and (min-width: 426px) {
+            .login-main-container-panel {
+                width: 350px;
+                margin: auto;
+            }
+        }
+        
+        @media only screen and (max-width: 425px) {
+            .login-main-container-panel {
+                width: 300px;
+                margin: auto;
             }
         }
 
         .login-main-logo {
-            position: absolute;
-            width: 50%;
+            margin-left: 5%;
+            margin-right: 5%;
+            width: 100%;
             height: auto;
-            left: 50%;
-            top: 50%;
-            transform: translate(0%, -60%);
         }
     }
 }
