Issue-#34 Producten toevoegen aan cart -popup

--- a/src/webroot/css/less/cart.less
+++ b/src/webroot/css/less/cart.less
@@ -1,70 +1,69 @@
+.addToCartPopup-layer {
+    position: fixed;
+    z-index: 200; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
 .addToCartPopup {
     position: absolute;
-    height: 110%;
+    height: 120%;
     width: 100%;
     top: -5%;
     left: 0%;
-    padding-left: 14px;
-    padding-right: 14px;
-    z-index: 200;
+    z-index: 210;
     display: flex;
     flex-wrap: wrap;
     background-color: rgba(255, 255, 255, 0.95);
-    
+
     .addToCartPopup-header {
         display: flex;
         justify-content: center;
         align-items: center;
         font-size: 1.5em;
+        font-weight: bold;
         color: white;
         background-color: #008dff;
         width: 100%;
         height: 12%;
-        
-        .addToCartPopup-close {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 1em;
-            height: 10%;
-            width: 10%;
-            position: absolute;
-            right: 0;
-            top: -5%;
-            background: red;
-            cursor: pointer;
-        }
     }
-    
+
     .addToCartPopup-body {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
         width: 100%;
         height: 88%;
-        /*background: red;*/
-        
+
         .addToCartPopup-body-quantity {
-            /*background: yellow;*/
             height: 32%;
             width: 100%;
             display: flex;
             justify-content: center;
-            
+
             .addToCartPopup-minus {
-                width: 18%;
+                padding-top: 17%;
+                width: 15%;
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                cursor: pointer;
             }
-            
+
             .addToCartPopup-plus {
-                width: 18%;
+                padding-top: 17%;
+                width: 15%;
                 display: flex;
                 justify-content: center;
                 align-items: center;
+                cursor: pointer;
             }
-            
+
             .addToCartPopup-quantity {
                 display: flex;
                 flex-wrap: wrap;
@@ -72,7 +71,11 @@
                 align-items: flex-start;
                 height: 100%;
                 width: 48%;
+                color: #008dff;
+
                 .addToCartPopup-quantity-top {
+                    padding-top: 5%;
+                    font-weight: bold;
                     text-align: center;
                     font-size: 1em;
                     width: 100%;
@@ -83,24 +86,25 @@
                 }
             }
         }
-        
+
         .addToCartPopup-properties {
             /*background: pink;*/
             height: 68%;
             width: 100%;
             display: flex;
+            justify-content: center;
             flex-wrap: wrap;
-            padding-left: 10%;
-            
+
             .addToCartPopup-product {
+                padding-left: 5%;
                 width: 100%;
-                /*height: 35%;*/
             }
-            
+
             .addToCartPopup-options {
+                padding-left: 5%;
                 width: 100%;
-                height: 25%;
-                
+                height: 20%;
+
                 .addToCartPopup-labels {
                     position: relative;
                     width: 60%;
@@ -124,25 +128,27 @@
                     }
                 }
             }
-            
+
             .addToCartPopup-labels {
                 font-size: 1.2em;
                 font-weight: bold;
             }
         }
-        
+
         .addToCartPopup-addButton {
             display: flex;
             justify-content: center;
             align-items: center;
             width: 80%;
-            height: 20%;
-            border-radius: 5px;
+            height: 25%;
+            border-radius: 10px;
             background-color: #008dff;
             cursor: pointer;
             color: white;
             font-size: 1.5em;
             font-weight: bold;
+            margin-top: 3%;
+            margin-bottom: 5%;
             -webkit-touch-callout: none; /* iOS Safari */
             -webkit-user-select: none;   /* Chrome/Safari/Opera */
             -khtml-user-select: none;    /* Konqueror */
