fix - added confirmation popup

--- a/src/webroot/css/less/cart.less
+++ b/src/webroot/css/less/cart.less
@@ -10,12 +10,24 @@
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
+.addToCartPopup-confirmation {
+    position: fixed;
+    z-index: 210;
+    left: 25%;
+    top: 40%;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
 .addToCartPopup {
     position: absolute;
     height: 120%;
-    width: 100%;
+    width: 96%;
     top: -5%;
-    left: 0%;
+    left: 2%;
     z-index: 210;
     display: flex;
     flex-wrap: wrap;
