--- a/src/webroot/css/less/login.less
+++ b/src/webroot/css/less/login.less
@@ -6,8 +6,7 @@
     top: 0;
     display: flex;
     justify-content: center;
-    /*padding-top: 97px;*/
-    overflow: auto;
+    overflow: hidden;
     background: -webkit-radial-gradient(50% -5%, #455267, #1a181c); /* Safari */
     background: -o-radial-gradient(50% -5%, #455267, #1a181c); /* Opera 11.6 to 12.0 */
     background: -moz-radial-gradient(50% -5%, #455267, #1a181c); /* Firefox 3.6 to 15 */
