--- a/src/webroot/css/less/photosIndex.less
+++ b/src/webroot/css/less/photosIndex.less
@@ -35,8 +35,6 @@
     .photos-index-row {
     }
     .photos-index-container {
-        padding-left: 1%;
-        padding-right: 1%;
         margin-bottom: 2%;
     }
     .photos-index-icon {
@@ -102,9 +100,11 @@
 
 .photos-index-banner-sm {
     border: 1px solid #b5b5b5;
-    background-image: url('../img/layout/Hoogstraten_webshop-onderdelen-41.png');
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
+    background: #19161a; /* Old browsers */
+    background: -moz-linear-gradient(left, #19161a 0%, #435063 50%, #435063 51%, #19161a 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(left, #19161a 0%,#435063 50%,#435063 51%,#19161a 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to right, #19161a 0%,#435063 50%,#435063 51%,#19161a 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#19161a', endColorstr='#19161a',GradientType=1 ); /* IE6-9 */
     padding-left: 3%;
     padding-right: 0px;
     width: 100%;
