--- a/src/webroot/css/less/content.less
+++ b/src/webroot/css/less/content.less
@@ -2,11 +2,17 @@ a {
     text-decoration: none;
 }
 .navbar {
-    background: url('/img/layout/header.png') center center no-repeat #19161a !important;
+    background: #19161a; /* Old browsers */
+    background: -moz-linear-gradient(left, #19161a 0%, #435063 50%, #435063 51%, #19161a 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(left, #19161a 0%,#435063 50%,#435063 51%,#19161a 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to right, #19161a 0%,#435063 50%,#435063 51%,#19161a 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#19161a', endColorstr='#19161a',GradientType=1 ); /* IE6-9 */
     min-height: 97px;
     border-bottom: 6px solid #eda111;
-    overflow: hidden;
-     .navbar-brand {
+    #logo-top {
+        margin-top: 20px;
+    }
+    .navbar-brand {
         line-height: 97px;
     }
     .cart-btn {
@@ -88,15 +94,22 @@ a {
     }
 }
 .desktopmenu {
+    a {
+        width: 65px;
+        float: right;
+    }
     .dropdown-menu {
         top: 83px;
     }
     ul.dropdown-menu {
         margin: 0px !important;
-    }
-    ul.dropdown-menu  {
         width: 400px !important;
     }
+    ul.dropdown-menu li a{
+        float: left;
+        width: 100%;
+    }
+    
 }
 div#content {
     margin-top: 97px;
