--- a/src/webroot/css/less/content.less
+++ b/src/webroot/css/less/content.less
@@ -10,7 +10,13 @@ a {
     min-height: 97px;
     border-bottom: 6px solid #eda111;
     #logo-top {
-        margin-top: 20px;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        display: flex; 
+        align-items: center;
     }
     .navbar-brand {
         line-height: 97px;
@@ -44,6 +50,13 @@ a {
             width: 70%;
             right: 10px;
             top: 8px;
+        }
+    }
+    @media only screen and (max-width: 980px) {
+        .navbar-back-to-index {
+            width: 60px;
+            border-top-left-radius: 30px;
+            border-top-right-radius: 30px;
         }
     }
     .portraits-container {
@@ -98,18 +111,31 @@ a {
         width: 65px;
         float: right;
     }
-    .dropdown-menu {
-        top: 83px;
-    }
     ul.dropdown-menu {
+        top: 83px;
         margin: 0px !important;
-        width: 400px !important;
+        width: 400px;
     }
     ul.dropdown-menu li a{
         float: left;
         width: 100%;
     }
-    
+    @media only screen and (max-width: 768px) {
+        .dropdown {
+            position: inherit;
+        }
+        ul.dropdown-menu {
+            width: 139%;
+            text-align: right;
+            position: absolute;
+            left: -37%;
+            right: 0;
+            top: 97px;
+        }
+        ul.dropdown-menu li a {
+            height: 44px;
+        }
+    }
 }
 div#content {
     margin-top: 97px;
