--- a/src/webroot/css/less/content.less
+++ b/src/webroot/css/less/content.less
@@ -54,9 +54,14 @@ a {
     }
     @media only screen and (max-width: 980px) {
         .navbar-back-to-index {
-            width: 60px;
-            border-top-left-radius: 30px;
-            border-top-right-radius: 30px;
+            height: 53px;
+            width: 90px;
+            border-radius: 90px 90px 0 0;
+            -moz-border-radius: 90px 90px 0 0;
+            -webkit-border-radius: 90px 90px 0 0;
+            .navbar-back-to-index-img {
+                left: 28%;
+            }
         }
     }
     .portraits-container {
