arrow more neat

--- a/src/webroot/css/less/content.less
+++ b/src/webroot/css/less/content.less
@@ -60,7 +60,9 @@ a {
             -moz-border-radius: 90px 90px 0 0;
             -webkit-border-radius: 90px 90px 0 0;
             .navbar-back-to-index-img {
-                left: 28%;
+                left: 33%;
+                height: 60%;
+                top: 22%;
             }
         }
     }
