responsive menu fixed for firefox and chrome

--- a/src/webroot/css/less/content.less
+++ b/src/webroot/css/less/content.less
@@ -132,16 +132,15 @@ a {
             position: inherit;
         }
         ul.dropdown-menu {
-            width: 139%;
+            width: 776px;
             text-align: right;
             position: absolute;
-            left: -37%;
-            right: 0;
+            right: -9px;
             top: 97px;
         }
         ul.dropdown-menu li a {
             height: 44px;
-            padding: 12px 20px;
+            padding-top: 12px;
         }
     }
 }
