selecteer een product alignen

--- a/src/webroot/css/less/photosIndex.less
+++ b/src/webroot/css/less/photosIndex.less
@@ -198,8 +198,9 @@
     }
     
     .photos-view-products-buttons-md {
-        height: 100%;
-        padding-top: 40%;
+        position: absolute;
+        top: 36%;
+        right: 0;
         .photos-view-products-select {
             width: 100%;
             height: auto;
@@ -207,6 +208,7 @@
         h3 {
             color: #008eff;
             font-weight: bold;
+            font-size: 25px;
         }
         @media only screen and (max-width: 1199px) {
             h3 {
