menu more according like in the designs

--- a/src/webroot/css/less/content.less
+++ b/src/webroot/css/less/content.less
@@ -122,10 +122,14 @@ a {
         top: 83px;
         margin: 0px !important;
         width: 400px;
+        text-align: right;
     }
     ul.dropdown-menu li a{
         float: left;
         width: 100%;
+        padding-top: 12px;
+        height: 44px;
+        font-weight: bold;
     }
     @media only screen and (max-width: 768px) {
         .dropdown {
@@ -133,14 +137,13 @@ a {
         }
         ul.dropdown-menu {
             width: 776px;
-            text-align: right;
             position: absolute;
             right: -9px;
             top: 97px;
         }
         ul.dropdown-menu li a {
-            height: 44px;
-            padding-top: 12px;
+            
+            
         }
     }
 }
