--- a/src/webroot/css/less/content.less
+++ b/src/webroot/css/less/content.less
@@ -52,13 +52,14 @@ a {
             top: 8px;
         }
     }
-    @media only screen and (max-width: 980px) {
+    @media only screen and (max-width: 768px) {
         .navbar-back-to-index {
             height: 53px;
             width: 90px;
             border-radius: 90px 90px 0 0;
             -moz-border-radius: 90px 90px 0 0;
             -webkit-border-radius: 90px 90px 0 0;
+            right: 34%;
             .navbar-back-to-index-img {
                 left: 33%;
                 height: 60%;
