--- a/src/webroot/css/less/cart.less
+++ b/src/webroot/css/less/cart.less
@@ -273,3 +273,14 @@
     border-left: 2px solid #b5b5b5;
 }
 
+.order-info {
+    h2 {
+        color: #d15400;
+        font-weight: bold;
+        margin-bottom: 15px;
+    }
+    h3 {
+        margin-bottom: 15px;
+    }
+}
+
