Cart finetuning en funproducten added

--- a/src/webroot/css/less/content.less
+++ b/src/webroot/css/less/content.less
@@ -151,3 +151,10 @@ a {
 div#content {
     margin-top: 97px;
 }
+
+div.small-cart div.label {
+    float: right;
+    position: absolute;
+    margin-left: 16%;
+    margin-top: 30px;
+}
