--- a/src/webroot/css/less/photosIndex.less
+++ b/src/webroot/css/less/photosIndex.less
@@ -44,6 +44,12 @@
         padding-bottom: 100%;
         position: relative;
         overflow: hidden;
+        .group-picture{
+            cursor: pointer;
+        }
+    }
+    .modal img{   
+        border: 3px solid #1c1c1c; 
     }
 }
 
@@ -329,7 +335,7 @@
             .dimensions {
                 justify-content: flex-end;
             }
-            .plus-sign {
+            .plus-sign, .plus-sign-non-quantity {
                 position : absolute;
                 height: 100%;
                 width: auto;
@@ -349,6 +355,10 @@
             position: relative;
             overflow: hidden;
         }
+    }
+    
+    .fullwidth{
+        width: 100%;
     }
     
     @media only screen and (max-width: 600px) {
