--- a/src/webroot/css/less/photosIndex.less
+++ b/src/webroot/css/less/photosIndex.less
@@ -11,6 +11,10 @@
     width: 100%;
 }
 
+.photos-horizontal.update-orderline {
+    cursor: pointer;
+}
+
 .photos-vertical {
     position: absolute;
     top: 50%; left: 50%;
