--- a/src/webroot/css/less/cart.less
+++ b/src/webroot/css/less/cart.less
@@ -189,12 +189,8 @@
     .cartline-row {
         margin-left: 0;
         padding: 0;
-        /*font-size: 1em;*/
-        /*height: 190px;*/
         .cartline-photo-container {
-            width: 20%;
-            /*padding: 0;*/
-            margin: 1% 2.5% 1% 2.5%;
+            margin: 1% 0%;
             .cartline-photo {
                 width: 100%;
                 height: 0;
