--- a/webroot/admin/css/ace.css
+++ b/webroot/admin/css/ace.css
@@ -3340,6 +3340,10 @@ body.mob-safari .sidebar.sidebar-fixed {
     left: 190px;
     margin-left: -190px;
   }
+  
+  .navbar-toggle.menu-toggler {
+    display: block;
+  }
 }
 @media (min-width: 992px) and (max-width: 991px) {
   .sidebar.responsive.compact {
