- Merge request feedback van Roel verwerkt

--- a/webroot/admin/css/custom.css
+++ b/webroot/admin/css/custom.css
@@ -28,3 +28,9 @@ th{
 .right-fix {
     margin-right:15px;
 }
+
+@media only screen and (max-width: 991px) {
+    .navbar-toggle.menu-toggler {
+        display: block;
+    }
+}
