--- a/src/webroot/css/less/cart.less
+++ b/src/webroot/css/less/cart.less
@@ -280,3 +280,97 @@
     }
 }
 
+.order-confirm {
+    h2 {
+        color: #d15400;
+        font-weight: bold;
+    }
+    
+    .cartlines-header {
+        color: white;
+        background: #eda111;
+        border-right: 1px solid white;
+        text-align: center;
+    }
+    
+    .cartline-row {
+        margin-left: 0;
+        padding: 0;
+        .cartline-photo-container {
+            margin: 1% 0%;
+            .cartline-photo {
+                width: 100%;
+                height: 0;
+                padding-bottom: 100%;
+                position: relative;
+                border: 1px solid #b5b5b5;
+                overflow: hidden;
+                background: white;
+                border-radius: 3px;
+            }
+        }
+        .cartline-product-details {
+            height: 100%;
+            padding-top: 20px;
+            .cartline-product-name {
+                width: 100%;
+            }
+            .cartline-product-options {
+                width: 100%;
+                ul {
+                    padding-left: 10px;
+                }
+            }
+        }
+        .cartline-product-quantity {
+            .quantity-container {
+                padding-top: 50px;
+            }
+            text-align: center;
+            padding-left: 0;
+            padding-right: 0;
+        }
+        .cartline-product-unitPrice {
+            padding-top: 20px;
+            text-align: right;
+        }
+        .cartline-product-price {
+            padding-top: 20px;
+            padding-right: 0;
+            padding-left: 0;
+            text-align: right;
+        }
+        .cartline-close {
+            padding-top: 5px;
+            padding-right: 5px;
+            span {
+                float:right;
+                font-size: 2em;
+            }
+        }
+    }
+    
+    .cartline-row:nth-child(even) {
+        background: #f0f0f0;
+    }
+    
+    .order-summary {
+        
+        margin-top: 20px;
+        margin-bottom: 100px;
+        padding-top: 30px;
+        border-top: 1px solid #b5b5b5;
+        
+        .order-summary-block {
+            margin-bottom: 25px;
+            .order-total {
+                margin-top: 10px;
+            }
+        }
+    }
+    
+    .order-confirm-payment-method {
+        margin-bottom: 50px;
+    }
+}
+
