--- a/src/webroot/css/less/photosIndex.less
+++ b/src/webroot/css/less/photosIndex.less
@@ -101,6 +101,7 @@
     .photos-index-banner-ul li.li-no-background {
         background: none;
         padding: 5%;
+        padding-top: 15%;
         border: none;
     }
 }
