--- a/src/webroot/css/less/login.less
+++ b/src/webroot/css/less/login.less
@@ -10,6 +10,7 @@
     background: -webkit-radial-gradient(50% -5%, #455267, #1a181c); /* Safari */
     background: -o-radial-gradient(50% -5%, #455267, #1a181c); /* Opera 11.6 to 12.0 */
     background: -moz-radial-gradient(50% -5%, #455267, #1a181c); /* Firefox 3.6 to 15 */
+    z-index: -2;
     
     .login-main-container {
         width: 1100px;
@@ -21,9 +22,10 @@
         }
         
         .login-main-container-panel {
-            min-height: 500px;
+            min-height: 350px;
             background-image: url('../img/layout/Hoogstraten_webshop-onderdelen-12.png');
             background-size: 100% 100%;
+            margin-top: 8%;
             padding:0px;
             padding-top: 2%;
             padding-bottom: 2%;
@@ -33,12 +35,12 @@
                 justify-content: center;
                 flex-wrap: wrap;
                 width: 100%;
-                min-height: 500px;
+                min-height: 350px;
                 
                 .login-portraits-container {
                     width: 100%;
                     min-height: 25%;
-                    margin-top: 4%;
+                    margin-top: 2%;
                     padding: 2%;
                     display: flex;
                     justify-content: center;
@@ -107,6 +109,7 @@
                 }
                 .login-submit-button {
                     padding: 5%;
+                    padding-bottom: 0%;
                     position: relative;
                 }
                 .login-container-button {
@@ -118,7 +121,6 @@
                     filter: brightness(0.9);
                     width: 100%;
                     cursor: pointer;
-                    
                     
                     .input-image {
                         width: 100%;
@@ -139,10 +141,12 @@
                 }
                 .order-button {
                     position: relative;
+                    font-size: 1.7em;
                 }
                 .submit-button {
                     position: relative;
                     display: block;
+                    font-size: 1.6em;
                 }
                 .login-container-button:hover {
                     -webkit-filter: brightness(115%);
@@ -178,6 +182,41 @@
                     user-select: none;
                 }
             }
+            
+            .login-action-star {
+                position: absolute;
+                left: 77%;
+                top: 100px;
+                width: 70%;
+                height: auto;
+                z-index: -1;
+                .login-action-star-message {
+                    position: absolute;
+                    top: 30%;
+                    left: 36%;
+                    width: 40%;
+                    color: white;
+                    /*font-size: 1em;*/
+                }
+                img {
+                    width: 100%;
+                    height: auto;
+                }
+            }
+        }
+        
+        @media only screen and (max-width: 1000px) and (min-width: 767px) {
+            .login-action-star-message {
+                font-size: 0.8em;
+            }
+        }
+        
+        
+        @media only screen and (max-width: 767px) and (min-width: 426px) {
+            .login-main-container-panel {
+                width: 350px;
+                margin-right: 150px;
+            }
         }
         
         @media only screen and (max-width: 767px) and (min-width: 426px) {
@@ -193,12 +232,16 @@
                 margin: auto;
             }
         }
-
-        .login-main-logo {
-            margin-left: 5%;
-            margin-right: 5%;
-            width: 100%;
-            height: auto;
+        
+        .login-logo-container {
+            padding-top: 30%;
+            .login-main-logo {
+                position: absolute;
+                top: 40%;
+                margin-right: 5%;
+                width: 100%;
+                height: auto;
+            }
         }
     }
 }
