--- a/src/webroot/css/less/content.less
+++ b/src/webroot/css/less/content.less
@@ -25,6 +25,7 @@ a {
         text-align: right;
     }
     .cart-btn.desktopmenu {
+        height: 100%;
         padding: 13px 0px;
     }
     .navbar-back-to-index {
@@ -153,8 +154,11 @@ div#content {
 }
 
 div.small-cart div.label {
-    float: right;
     position: absolute;
-    margin-left: 16%;
-    margin-top: 30px;
+    right: 74px;
+    top: 34px;
+    background-color: transparent;
+    font-size: 1.8em;
+    color: #00a8d6;
+    z-index: -1;
 }
