--- a/src/webroot/css/less/login.less
+++ b/src/webroot/css/less/login.less
@@ -141,12 +141,12 @@
                 }
                 .order-button {
                     position: relative;
-                    font-size: 1.7em;
+                    font-size: 1.4em;
                 }
                 .submit-button {
                     position: relative;
                     display: block;
-                    font-size: 1.6em;
+                    font-size: 1.4em;
                 }
                 .login-container-button:hover {
                     -webkit-filter: brightness(115%);
@@ -211,14 +211,6 @@
             }
         }
         
-        
-        @media only screen and (max-width: 767px) and (min-width: 426px) {
-            .login-main-container-panel {
-                width: 350px;
-                margin-right: 150px;
-            }
-        }
-        
         @media only screen and (max-width: 767px) and (min-width: 426px) {
             .login-main-container-panel {
                 width: 350px;
@@ -228,8 +220,11 @@
         
         @media only screen and (max-width: 425px) {
             .login-main-container-panel {
-                width: 300px;
+                width: 250px;
                 margin: auto;
+            }
+            .login-action-star-message {
+                font-size: 0.8em;
             }
         }
         
@@ -242,6 +237,18 @@
                 width: 100%;
                 height: auto;
             }
+        }
+    }
+    @media only screen and (max-width: 767px) and (min-width: 426px) {
+        .login-main-container {
+            padding-left: 10%;
+            padding-right: 30%;
+        }
+    }
+    @media only screen and (max-width: 425px) {
+        .login-main-container {
+            padding-left: 5%;
+            padding-right: 25%;
         }
     }
 }
