--- a/src/webroot/css/less/content.less
+++ b/src/webroot/css/less/content.less
@@ -153,6 +153,12 @@ div#content {
     margin-top: 97px;
 }
 
+@media only screen and (min-width: 1200px) {
+    div#content {
+        width: 83.33%;
+    }
+}
+
 div.small-cart div.label {
     position: absolute;
     right: 74px;
