--- a/src/webroot/css/less/photosIndex.less
+++ b/src/webroot/css/less/photosIndex.less
@@ -40,6 +40,8 @@
     }
     .photos-index-container {
         margin-bottom: 2%;
+        padding-left: 0px;
+        padding-right: 10px;
     }
     .photos-index-icon {
         border: 1px solid #b5b5b5;
@@ -650,7 +652,7 @@
         border-left: 2px solid #b5b5b5;
     }
     .photos-index-container {
-        width: 14.3%;
+        width: 14.2%;
     }
 }
 
@@ -678,6 +680,6 @@
         border-left: 2px solid #b5b5b5;
     }
     .photos-index-container {
-        width: 14.3%;
+        width: 14.2%;
     }
 }
