- Updated login pagina naar nieuw design

--- a/src/webroot/css/less/login.less
+++ b/src/webroot/css/less/login.less
@@ -121,6 +121,7 @@
                     filter: brightness(0.9);
                     width: 100%;
                     cursor: pointer;
+                    height:51px;
                     
                     .input-image {
                         width: 100%;
@@ -133,11 +134,13 @@
                         width: 100%;
                         text-align: center;
                         color: white;
-                        font-family: Alegreya Sans;
                         font-weight: bold;
-                        font-size: 1em;
+                        font-size: 14px;
                         pointer-events: none;
                     }
+                }
+                .login-container-button.large {
+                    height:69px;
                 }
                 .order-button {
                     position: relative;
