--- a/src/webroot/css/less/content.less
+++ b/src/webroot/css/less/content.less
@@ -102,6 +102,14 @@ a {
                 max-height: 100%;
             }
         }
+        .portrait-container.login-extra-child-icon {
+            border:none;
+            
+            a img {
+                width:60px;
+                height:60px;
+            }
+        }
     }
 }
 .dropdown-menu {
