- Funproducten pagina verbeterd naar nieuw design

--- a/src/webroot/css/less/photosIndex.less
+++ b/src/webroot/css/less/photosIndex.less
@@ -362,6 +362,61 @@
             overflow: hidden;
         }
     }
+    .photos-product-container.fun-product {      
+        .photos-product-label {
+            font-size:21px;
+            
+            .price {
+                padding:20px;
+                font-weight:bold;
+            }
+            .dimensions {
+                padding:20px 20px 20px 262px;
+                font-weight:bold;
+                color:white;
+                justify-content: flex-start;
+                background:url('../img/layout/Hoogstraten_Digitale-downloads_webshop_10.png');
+            }
+            
+            @media only screen and (max-width: 1599px) {
+                .dimensions {
+                    padding-left:200px;
+                }
+            }
+            
+            @media only screen and (max-width: 1199px) {
+                .dimensions {
+                    padding-left:170px;
+                }
+            }
+            
+            @media only screen and (max-width: 991px) {
+                .dimensions {
+                    padding-left:150px;
+                }
+            }
+            
+            @media only screen and (max-width: 768px) {
+                .dimensions {
+                    padding-left:100px;
+                }
+            }
+            
+            @media only screen and (max-width: 375px) {
+                .dimensions {
+                    padding-left:20px;
+                }
+            }
+        }
+        
+        .photos-product-details {
+            margin-top:30px;
+            
+            .product-description {
+                font-size:18px;
+            }
+        }
+    }
     
     .fullwidth{
         width: 100%;
