- AddToCart popup werkt nu weer naar behoren

--- a/src/webroot/css/less/photosIndex.less
+++ b/src/webroot/css/less/photosIndex.less
@@ -362,7 +362,9 @@
             overflow: hidden;
         }
     }
-    .photos-product-container.fun-product {      
+    .photos-product-container.fun-product {
+        position:relative;
+        
         .photos-product-label {
             font-size:21px;
             
@@ -415,6 +417,14 @@
             .product-description {
                 font-size:18px;
             }
+        }
+        
+        .addToCartPopup {
+            margin-left:-118px;
+            width:237px;
+            height:300px;
+            top:65px;
+            left:50%;
         }
     }
     
